# pfp-cst

./: CMakeLists.txt  README.md
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
benchmarks/src/: CMakeLists.txt  cst_w.hpp  pfp_cst_benchmarks.cpp  pfp_cst_benchmarks_pfp_only.cpp  pfp_cst_w.hpp  sdsl_cst_w.hpp
include/: CMakeLists.txt
include/pfp/: dictionary.hpp  lce_support.hpp  pfp.hpp  pfp_cst.hpp  sa_support.hpp  wm.hpp  wt.hpp
pipeline/: pfp-cst.in  pfp_ds
src/: CMakeLists.txt  pfp-cst_build.cpp
test/src/: CMakeLists.txt  ds_building.cpp  ds_building_wt_custom.cpp  ds_building_wt_sdsl.cpp  ds_building_wt_sdsl_2.cpp  ds_building_wt_wm.cpp  pfp_cst_test.cpp  pfp_test.cpp  sdsl_cst_sada.cpp  sdsl_wm_test.cpp
